'side' parameter added
